# Lastmile-Gig-Ecosystem

./: .editorconfig  .env.example  .eslintrc.json  .gitignore  .prettierrc  CODING_STANDARDS.md  CONTRIBUTIONS.md  DEVELOPMENT_DIRECTIVES.md  DEVELOPMENT_ROADMAP.md  POLYGLOT_ARCHITECTURE.md  PROJECT_STATUS.md  README.md  SECURITY.md  commitlint.config.js  docker-compose.dev.yml  nx.json  package.json  tsconfig.base.json
.github/: pull_request_template.md
.github/workflows/: svc-iot.yml
.zap/: rules.tsv
apps/api-gateway/: Dockerfile  README.md  package.json  tsconfig.json
apps/api-gateway/helm/: Chart.yaml  values.yaml
apps/api-gateway/src/: app.module.ts  main.ts
apps/dashboard-admin/: README.md
apps/dashboard-command/: README.md
apps/dashboard-ops/: README.md
apps/mobile-customer/: README.md
apps/mobile-driver/: README.md  app.json  package.json
apps/mobile-driver/app/: _layout.tsx
apps/mobile-driver/services/: notification.service.ts  offline-queue.service.ts
apps/svc-agents/: Dockerfile  README.md  pyproject.toml
apps/svc-agents/src/: __init__.py  config.py  main.py
apps/svc-agents/src/graphs/: __init__.py  dispatch_optimizer.py  fraud_investigator.py
apps/svc-agents/src/models/: __init__.py  schemas.py
apps/svc-agents/src/routes/: agents.py  crews.py  health.py
apps/svc-ai/: Dockerfile  README.md  pyproject.toml
apps/svc-ai/menu_extraction/: __init__.py  extractor.py  models.py  router.py  test_extractor.py
apps/svc-ai/src/: __init__.py  config.py  main.py
apps/svc-ai/src/models/: __init__.py  schemas.py
apps/svc-ai/src/routes/: __init__.py  embeddings.py  health.py  inference.py  rag.py
apps/svc-ai/src/services/: __init__.py  llm_client.py  vector_store.py
apps/svc-ai/tests/: test_schemas.py  test_vector_store.py
apps/svc-analytics/: Dockerfile  README.md  pyproject.toml
apps/svc-analytics/src/: __init__.py  config.py  main.py
apps/svc-analytics/src/models/: schemas.py
apps/svc-analytics/src/routes/: __init__.py  forecasting.py  health.py  metrics.py  reports.py
apps/svc-auth/: Dockerfile  README.md  package.json  tsconfig.json
apps/svc-auth/helm/: Chart.yaml  values.yaml
apps/svc-auth/src/: auth.controller.ts  auth.module.ts  auth.service.ts  main.ts
apps/svc-blockchain/: Cargo.toml  Dockerfile  README.md
apps/svc-blockchain/src/: config.rs  error.rs  main.rs
apps/svc-blockchain/src/api/: handlers.rs  routes.rs
apps/svc-blockchain/src/blockchain/: abi_loader.rs  client.rs  contracts.rs  event_indexer.rs  metrics.rs  mod.rs  tx_manager.rs
apps/svc-blockchain/src/kafka/: consumer.rs  mod.rs
apps/svc-blockchain/src/models/: mod.rs
apps/svc-comms/: README.md
apps/svc-dispatch/: Dockerfile  README.md  go.mod
apps/svc-dispatch/helm/: Chart.yaml  values.yaml
apps/svc-drivers/: Dockerfile  README.md  package.json  tsconfig.json
apps/svc-drivers/helm/: Chart.yaml  values.yaml
apps/svc-drivers/src/: driver.controller.ts  driver.module.ts  driver.service.ts  main.ts
apps/svc-fleet/: Dockerfile  README.md  package.json  tsconfig.json
apps/svc-fleet/src/: fleet.controller.ts  fleet.module.ts  fleet.service.ts
apps/svc-iot/: Cargo.toml  Dockerfile  README.md
apps/svc-iot/src/: config.rs  error.rs  main.rs
apps/svc-iot/src/api/: handlers.rs  mod.rs  routes.rs
apps/svc-iot/src/db/: mod.rs  timescaledb.rs
apps/svc-iot/src/models/: mod.rs
apps/svc-iot/src/mqtt/: mod.rs  subscriber.rs
apps/svc-iot/src/telemetry/: batch_processor.rs  geofence.rs  metrics.rs  mod.rs  processor.rs
apps/svc-logistics/: README.md
apps/svc-orders/: Dockerfile  README.md  tsconfig.json
apps/svc-orders/helm/: Chart.yaml  values.yaml
apps/svc-orders/src/: main.ts  order.controller.ts  order.module.ts  order.service.spec.ts  order.service.ts
apps/svc-payments/: Dockerfile  README.md  pom.xml
apps/svc-payments/helm/: Chart.yaml  values.yaml
apps/svc-storefronts/: Dockerfile  README.md  package.json  tsconfig.json
apps/svc-storefronts/helm/: Chart.yaml  values.yaml
apps/svc-storefronts/src/: main.ts  storefront.module.ts  storefront.service.spec.ts
apps/svc-tracking/: Dockerfile  README.md  mix.exs
apps/svc-tracking/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
apps/svc-tracking/helm/: Chart.yaml  values.yaml
apps/svc-tracking/test/: test_helper.exs
apps/web-corporate/: README.md
apps/web-customer/: README.md
apps/web-loyalty/: README.md
apps/web-storefronts/: .dockerignore  Dockerfile  README.md  next.config.js  playwright.config.ts
ci/workflows/: ci-base.yml  database-migrations.yml  security-checkov.yml  security-snyk.yml  security-sonarqube.yml  security-zap.yml
contracts/: hardhat.config.ts  package.json
contracts/scripts/: deploy.ts
contracts/solidity/: .env.example  .solhint.json  README.md  hardhat.config.ts  package.json  tsconfig.json
contracts/src/: DeliveryVerification.sol  DriverPayout.sol  PartnerSLA.sol
docs/adr/: ADR-000-template.md  ADR-001-polyglot-architecture.md  ADR-002-blockchain-iot-architecture.md  ADR-003-ai-agentic-architecture.md
docs/ci/: ci.yml.reference  smart-contracts.yml.reference  svc-blockchain.yml.reference
docs/specs/: 01_MASTER_OVERVIEW.md  02_TECH_STACK.md  03_FRONTEND_SPEC.md  04_BACKEND_MICROSERVICES.md  05_AI_AGENTIC_LAYER.md  06_BLOCKCHAIN_LAYER.md  07_DATABASE_ARCHITECTURE.md  08_INFRASTRUCTURE_IaC.md  09_OBSERVABILITY.md  10_SECURITY_COMPLIANCE.md  11_PAYMENTS_FINANCIAL.md  12_API_INTEGRATION_SPEC.md  13_DEVOPS_CICD.md  14_RESTAURANT_STOREFRONT_SPEC.md  15_DRIVER_ECOSYSTEM_SPEC.md  16_ESG_SUSTAINABILITY.md  17_DEVELOPMENT_ROADMAP.md  18_AGENTIC_DEV_STANDARDS.md  19_LOC_ESTIMATION.md
infrastructure/: README.md
infrastructure/argocd/: api-gateway.yaml  svc-auth.yaml
infrastructure/auth/: auth0-config.yaml
infrastructure/terraform/: backend.tf  outputs.tf  provider.tf  variables.tf  versions.tf
infrastructure/terragrunt/: terragrunt.hcl
libs/api-client/: README.md
libs/shared-types/: README.md  package.json  tsconfig.json
libs/shared-ui/: README.md
libs/shared-utils/: README.md
(+428 files in other folders)
