[project]
name = "svc-agents"
version = "0.1.0"
description = "Lastmile Gig Agent Service - LangGraph stateful agents and CrewAI multi-agent crews"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Lastmile Gig", email = "dev@aagais.co.za" }]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "langgraph>=0.0.40",
    "langchain>=0.2.0",
    "langchain-aws>=0.1.0",
    "crewai>=0.28.0",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
    "aiokafka>=0.10.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
