[project]
name = "svc-ai"
version = "0.1.0"
description = "Lastmile Gig AI Inference Service - LLM orchestration, RAG, and ML inference"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Lastmile Gig", email = "dev@aagais.co.za" }]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "langchain>=0.2.0",
    "langchain-aws>=0.1.0",
    "langchain-community>=0.2.0",
    "pinecone-client>=3.2.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
    "aiokafka>=0.10.0",
    "redis>=5.0.0",
    "boto3>=1.34.0",
    "numpy>=1.26.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
python_version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
