[package]
name = "svc-blockchain"
version = "0.1.0"
edition = "2021"
description = "Lastmile Gig Blockchain Service - Polygon CDK interface via Axum/Rust"
authors = ["Lastmile Gig <dev@aagais.co.za>"]
license = "MIT"
rust-version = "1.78"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Blockchain
ethers = { version = "2.0", features = ["abigen", "ws", "rustls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
dotenvy = "0.15"
envy = "0.4"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = { version = "0.22", features = ["trace"] }
opentelemetry-otlp = "0.15"
tracing-opentelemetry = "0.23"

# Async
futures = "0.3"

# Error handling
thiserror = "1"
anyhow = "1"

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Health check
sysinfo = "0.30"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
assert_matches = "1.5"
