[package]
name = "svc-iot"
version = "0.1.0"
edition = "2021"
description = "Lastmile Gig IoT Telemetry Service - MQTT ingestion and TimescaleDB storage"
authors = ["Lastmile Gig <dev@aagais.co.za>"]
license = "MIT"
rust-version = "1.78"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# MQTT
rumqttc = "0.24"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
dotenvy = "0.15"
envy = "0.4"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = { version = "0.22", features = ["trace"] }
tracing-opentelemetry = "0.23"

# Async
futures = "0.3"

# Error handling
thiserror = "1"
anyhow = "1"

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Metrics
prometheus = "0.13"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
assert_matches = "1.5"
